# taulu

./: .gitignore  CHANGELOG.md  CITATION.cff  Cargo.toml  LICENSE  README.md  cliff.toml  justfile  prek.toml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  docs.yml  main.yml  maturin.yml
benches/: edge_selection.rs
docs/: search.js  taulu.html
examples/: check_rules.py  demo.ipynb  example.py  run.bash  table_00_left.json  table_00_right.json
src/: direction.rs  edge_queue.rs  geom_util.rs  growgrid.rs  lib.rs  point.rs  table_grower.rs
src/tabular/: __init__.py  constants.py  corner_filter.py  error.py  header_aligner.py  header_template.py  img_util.py  main.py  page_cropper.py  split.py  table_indexer.py
src/taulu/: __init__.py  _core.pyi  config.py  corner_filter.py  decorators.py  grid.py  header_aligner.py  header_template.py  img_util.py  migrate.py  page_cropper.py  schema.py  split.py  table_indexer.py  table_template.py  taulu.py  template_matcher.py  types.py
src/taulu/gpu/: __init__.py  data.py  model.py  run.py  train.py
src/taulu/torch/: __init__.py  data.py  model.py  run.py  train.py
tests/: bench_rust.py  test_aligner.py  test_annotate.py  test_corner_filter.py  test_cropper.py  test_grid_detector.py  test_rust.py  test_taulu.py  test_threshold.py  util.py
