[project]
name = "taulu"
version = "2.4.0"
description = "Segment a table from an image"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "ipykernel>=7.2.0",
  "ipympl>=0.10.0",
  "matplotlib>=3.10.6",
  "numpy>=2.2.4",
  "opencv-contrib-python>=4.13.0.92",
  "opencv-python>=4.11.0.86",
  "pandas>=2.2.3",
  "scikit-image>=0.25.2",
  "scipy>=1.15.2",
]

[project.optional-dependencies]
torch = ["pillow>=12.1.1"]

[project.scripts]
taulu = "taulu:main"
taulu-schema = "taulu.schema:main"

[tool.pytest.ini_options]
markers = ["visual: marks tests that require visual confirmation"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_auto_indent = true

[tool.maturin]
module-name = "taulu._core"
python-packages = ["taulu"]
python-source = "src"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # Pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "RUF", # ruff-specific rules
]
ignore = [
  "E501", # line too long (ruff format handles this)
  "N818", # exception name should end with Error
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = [
  "glashelder",
  "common",
  "clipcluster",
  "classification",
  "preprocessing",
  "qwenvlm",
]

[tool.ty.src]
exclude = [
  "src/taulu/torch/",
  "examples/demo.ipynb",
]

[tool.ty.rules]
no-matching-overload = "ignore"

[tool.uv]
constraint-dependencies = ["tornado>=6.5.5", "fonttools>=4.60.2"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
  "py-spy>=0.4.0",
  "pytest>=8.3.5",
  "pdoc>=15.0.4",
  "maturin>=1.0,<2.0",
  "ruff>=0.15.7",
  "ty>=0.0.24",
]
